--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/ZewdieMc/Portfolio/issues"
   },
   "homepage": "https://github.com/ZewdieMc/Portfolio#readme",
-  "description": "",
+  "description": "<a name=\"readme-top\"></a>",
   "devDependencies": {
     "hint": "^7.1.3",
     "stylelint": "^13.13.1",
