--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   "homepage": "https://github.com/ZewdieMc/Portfolio#readme",
   "description": "<a name=\"readme-top\"></a>",
   "devDependencies": {
-    "hint": "^7.1.3",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.27.5",
+    "hint": "^2.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
